--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
     app:cardElevation="10dp"
     app:cardUseCompatPadding="true">
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,17 +31,27 @@
 
             </TextView>
 
+            <ImageView
+                android:id="@+id/updateBTN"
+                android:layout_width="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/baseline_edit_24"
+                android:layout_marginEnd="30dp"
+                android:layout_height="wrap_content">
+
+            </ImageView>
+
         </RelativeLayout>
 
         <TextView
             android:id="@+id/contentTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/poppins"
-            android:text="Content"
-            android:textColor="@color/orange"
             android:maxLines="3"
-            android:layout_marginTop="4dp">
+            android:text="Content"
+            android:textColor="@color/orange">
 
         </TextView>
 
