--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -34,12 +34,22 @@
             <ImageView
                 android:id="@+id/updateBTN"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/baseline_edit_24"
-                android:layout_marginEnd="30dp"
-                android:layout_height="wrap_content">
+                android:layout_marginEnd="40dp"
+                android:src="@drawable/baseline_edit_24">
 
             </ImageView>
+
+            <ImageView
+                android:id="@+id/deleteBTN"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/baseline_delete_24">
+
+            </ImageView>
+
 
         </RelativeLayout>
 
